# SoloX

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.zh.md  docker-compose.yml  git拉取远程快速配置.md  master_2222xx.md  master_xxxxx.md  pyproject.toml  requirements.txt  setup.py  test.py
.cargo/: config.toml
.github/workflows/: ci.yml
android-agent/: build.gradle.kts  settings.gradle.kts
android-agent/app/: build.gradle.kts  proguard-rules.pro
android-agent/app/src/main/: AndroidManifest.xml
android-agent/app/src/main/java/io/solox/networkagent/: MainActivity.java
android-agent/app/src/main/java/io/solox/networkagent/control/: CommandDispatcher.java  ControlSocketServer.java
android-agent/app/src/main/java/io/solox/networkagent/logging/: AgentLogEntry.java  AgentLogLevel.java  AgentLogStore.java
android-agent/app/src/main/java/io/solox/networkagent/model/: Json.java  WeakNetworkProfile.java
android-agent/app/src/main/java/io/solox/networkagent/nativebridge/: NativeTunnel.java
android-agent/app/src/main/java/io/solox/networkagent/notification/: AgentNotification.java
android-agent/app/src/main/java/io/solox/networkagent/protocol/: AgentCommand.java  AgentResponse.java
android-agent/app/src/main/res/drawable/: ic_agent_notification.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android-agent/native/: Cargo.toml
android-agent/native/src/: config.rs  counters.rs  lib.rs  runtime.rs  shaper.rs
android-agent/native/tests/: shaper_test.rs
docs/: 01-项目概述.md  02-技术架构.md  03-快速启动.md  04-开发指南.md  05-API文档.md  06-性能监控.md  07-部署指南.md  08-故障排除.md  09-贡献指南.md  DEPENDENCIES.md  README.md  compatibility-matrix.md  deployment.md  technical_framework.md  testing.md  troubleshooting.md  user_guide.md  视频问题.md
docs/01-architecture/: README.md  module-structure.md  project-overview.md  system-design.md  technical-architecture.md  technology-stack.md
docs/02-development/: development-guide.md  environment-setup.md  git-remote-setup.md  quick-start.md
docs/03-deployment/: deployment-guide.md
docs/04-user-guides/: api-documentation.md  performance-monitoring.md  weak-network-testing.md
docs/05-issues/: contribution-guide.md  faq.md  troubleshooting.md
docs/06-engineering/: android-agent-third-party.md  ci-gate-playbook.md  pre-publish-checklist.md  project-layout.md  release-and-dev-standards.md  weak-network-tooling.md
docs/acceptance/: gpu-chip-level-2026-07-12.md  ios-real-device-2026-07-12.md  joint-review-2026-compatibility.md  l3-device-lab-checklist.md  qas-network-agent-productization-2026-06-19.md  recording-web-flow-2026-07-12.md
docs/plans/: 2026-03-14-game-fps-collection-design.md  2026-03-14-game-fps-implementation-plan.md  2026-06-13-android-app-process-selection-design.md  2026-06-13-android-app-process-selection.md  2026-06-13-performance-acceptance-design.md  2026-06-13-performance-acceptance.md  2026-06-13-realtime-analysis-performance-design.md  2026-06-13-realtime-analysis-performance.md  2026-06-14-android-app-label-search.md  2026-06-14-android-app-label-usability-performance.md  2026-06-14-android-vpn-weaknet-design.md  2026-06-14-android-vpn-weaknet.md  2026-06-14-recording-health-status-design.md  2026-06-14-recording-health-status.md  2026-06-14-recording-mkv-remux-design.md  2026-06-14-recording-mkv-remux.md  2026-06-19-qas-network-agent-cn-tabs-design.md  2026-06-19-qas-network-agent-cn-tabs.md  2026-06-19-qas-network-agent-productization-design.md  2026-06-19-qas-network-agent-productization.md  2026-06-20-qas-agent-status-help-design.md  2026-06-20-qas-agent-status-help.md  2026-06-20-shared-android-toolchain-design.md  2026-06-20-shared-android-toolchain.md  2026-07-11-ios-gap-and-oss-survey.md  2026-07-11-ios-pmd3-backend.md  2026-07-12-android-ios-alignment-phase2.md  2026-07-12-ios-oss-borrow-survey.md  README.md
nginx/: nginx.conf
runtime/: README.md
scripts/: README.md  accept_record.ps1  accept_record.sh  accept_record_e2e.py  accept_record_gate.py  benchmark_report_api.py  dev.ps1  dev.sh  install_dependencies.ps1  install_dependencies.py  install_dependencies.sh  package.sh  release_gate.ps1  release_gate.sh  validate_compatibility_matrix.py  verify_setup.py
scripts/android_agent/: acceptance.py  bootstrap.ps1  build.ps1  package.ps1  toolchain.ps1
scripts/lib/: git_bash.ps1  python.ps1
scripts/weaknet_gateway/: README.md  apply.sh  clear.sh  status.sh
solox/: cli.py  debug.py  web.py
solox/mcp/: __init__.py  server.py  tools.py
solox/public/: _iosPerf.py  adb.py  android_fps.py  apm.py  common.py  metric_stats.py  performance_telemetry.py  report_analysis.py  weak_network.py
solox/public/android_agent/: README.md  checksums.json  qas-network-agent-0.1.0.apk
solox/public/ffmpeg/: README.md
solox/public/ios_ext/: __init__.py  _aio.py  device.py  frametime.py  netprobe.py  screen.py  weaknet.py
solox/public/weaknet/: __init__.py  agent.py  agent_protocol.py  engine.py  models.py  root_tc.py
solox/templates/: analysis.html  analysis_compare.html  analysis_pk.html  base.html  index.html  report.html
solox/view/: apis.py  pages.py
tests/: compatibility_matrix.yaml  conftest.py  matrix_loader.py  test_accept_record_gate.py  test_android_agent_control_plane.py  test_android_agent_native_integration.py  test_android_agent_project.py  test_android_agent_protocol.py  test_android_app_selection.py  test_apm_collect_api.py  test_apm_cpu_memory.py  test_cli_and_mcp.py  test_compatibility_matrix.py  test_fps_calculation.py  test_frontend_performance.py  test_ios_apis.py  test_ios_ext.py  test_ios_netprobe.py  test_joint_acceptance.py  test_metric_stats.py  test_performance_telemetry.py  test_record_player.py  test_report_analysis.py  test_report_management.py  test_surface_by_api.py  test_verify_setup_script.py  test_weak_network.py  test_weaknet_agent.py  test_weaknet_gateway_scripts.py  test_weaknet_probe_api.py  toolchain_helpers.py
tests/integration/: test_android_agent_device.py
(+5 files in other folders)
